syntax = "proto3";

package user;

option go_package = "/proto/pb";

service User {
  rpc Register (RegisterRequest) returns (UserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse);
  rpc IsValidToken(IsValidTokenRequest) returns (IsValidTokenResponse);
}

message IsValidTokenRequest {
  string token = 1;
}

message IsValidTokenResponse {
  bool valid = 1;
  UserResponse user = 2;
}

message UpdateUserRequest {
  string username = 1;
  string email = 2;
  string phonenumber = 3;
  string password = 4;
  string tier = 5;   // 'free' or 'business'
  uint64 id = 6;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string phonenumber = 3;
  string password = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GetUserRequest {
  uint64 id = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message UserResponse{
  string username = 1;
  string email = 2;
  string phonenumber = 3;
  string tier = 4;  // 'free' or 'business'
  int64 id = 5;
}

message LoginResponse {
  string token = 1;
}